# robotic-chess-player

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  color recognition test calhf.py  ik-solve-writeup-notes.md  launch_simulation.sh  main.py  meeting-notes.md  meeting-notes.txt  package.xml  progress.md  requirements.txt  run.sh  runRobot.sh  setup.py  test_chess.py  windowsapriltagtest.py
Document/: SD02 Demo 1.pptx
catkin_ws/src/: jh_ur10e_hande
dev/: CameraFeed.py  CameraFeedOCR.py  ChessEngine.py  ChessMovement.py  FilePathFinder.py  GamePlay.py  GripperInterface.py  RobotInterface.py  UserInterface.py  main.ipynb  main.py  mian.py  talker.py
dev/armature/: __init__.py  _armature.py  _posture.py
dev/examples/: cz-apriltag.py  jh1_basis_control.py  jh2_basis_control.py
jh_ur10e_hande/: CMakeLists.txt  package.xml
jh_ur10e_hande/config/: fake_controllers.yaml  jh_ur10e_hande.srdf  jh_ur10e_hande_controllers.yaml  pid_gains.yaml
jh_ur10e_hande/launch/: bringup.launch  gazebo_bringup.launch  moveit_planning_execution.launch  view.launch
jh_ur10e_hande/urdf/: ur10e_hande.urdf.xacro
launch/: chess_robot.launch
practice/: GripperInterface.py  RobotInterface.py  move_ur10e.py  ur10e_pick_and_drop.py
resources/: positions.txt
src/: Calibration.py  CameraFeed.py  ChessEngine.py  ChessMovement.py  FilePathFinder.py  GamePlay.py  GripperInterface.py  RobotInterface.py  UserInterface.py  _environment.py  main.ipynb  main.py  positions.txt  requirements.txt  robot_ur10e_gripper.py  run_chess_robot.py  setup.py  simulator.py
(+162 files in other folders)
